--- a/blocks/related-articles/src/style.scss
+++ b/blocks/related-articles/src/style.scss
@@ -1,15 +1,1 @@
-.wp-block-starterx-related-articles {
-  &__img {
-    width: 196px;
-    height: 196px;
-    margin-bottom: 15px;
-  }
-
-  &__post-date {
-
-  }
-
-  .wp-block-columns {
-    margin-top: 20px;
-  }
-}
+.related-articles {}
