--- a/blocks/related-articles/src/style.scss
+++ b/blocks/related-articles/src/style.scss
@@ -1,1 +1,11 @@
-.related-articles {}
+.related-articles {
+  &__item {
+    img {
+      display: block;
+      max-width: 100%;
+      width: 196px;
+      height: 196px;
+      object-fit: cover;
+    }
+  }
+}
